@@ -39,4 +39,3 @@ cs1540-3.cs NO ERROR # new in GMCS
 cs1540-5.cs NO ERROR # new in GMCS
 cs1586.cs
 cs1641.cs
-cs0669.cs
