@@ -1,3 +1,13 @@
+2005-11-08  Marek Safar  <marek.safar@seznam.cz>
+
+	* attribute.cs (Attribute.GetCoClassAttributeValue): New method.
+	(AttributeTester.GetCoClassAttribute): Get CoClassAttribute.
+
+	* class.cs (TypeContainer.IsComImport): New property.
+	(Constructor.Define): Create proper ctor for ComImport types.
+
+	* expression.cs (New.CheckComImport): Fixed.
+
 2005-11-07  Miguel de Icaza  <miguel@novell.com>
 
 	* anonymous.cs (CaptureContext.AddParameterToContext): The fact
